Streamline database, add dashboard functionality.
