# src/main/java/com/york/doghealthtracker/controller/UserController.java
@@ -1,11 +1,14 @@
 package com.york.doghealthtracker.controller;
 
 import com.york.doghealthtracker.api.UsersApi;
+import com.york.doghealthtracker.entity.DogEntity;
+import com.york.doghealthtracker.model.DashboardResponse;
 import com.york.doghealthtracker.model.DogResponse;
 import com.york.doghealthtracker.model.UserResponse;
 import com.york.doghealthtracker.model.UserUpdateRequest;
 import com.york.doghealthtracker.service.DogService;
 import com.york.doghealthtracker.service.UserService;
+import com.york.doghealthtracker.service.security.UserContextService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -14,10 +17,12 @@ public class UserController implements UsersApi {
 
     private final UserService userService;
     private final DogService dogService;
+    private final UserContextService userContextService;
 
-    public UserController(UserService userService, DogService dogService) {
+    public UserController(UserService userService, DogService dogService, UserContextService userContextService) {
         this.userService = userService;
         this.dogService = dogService;
+        this.userContextService = userContextService;
     }
 
     @Override
@@ -48,4 +53,10 @@ public class UserController implements UsersApi {
                     .orElse(ResponseEntity.notFound().build());
         }
 
+    @Override
+    public ResponseEntity<DashboardResponse> getDashboardByParticipantId(String participantId) {
+        DogEntity dog = userContextService.getDogInContext();
+        DashboardResponse response = userService.getUserDashboard(participantId, dog.getId());
+        return ResponseEntity.ok(response);
+    }
 }
